--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-signin-client_id" content="684699206898-42ite3ltboi340g1ji0n72cgdc32ba9b.apps.googleusercontent.com">
     <title>Login</title>
+
     <link rel="stylesheet" href="jquery.js">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -20,7 +21,7 @@
                   <h3 class="mb-5">Selamat Datang</h3>
                     <div class="row justify-content-center">
                       <div class="col-4">
-                        <button class="btn btn-primary btn-lg btn-block" style="background-color: #254ba5; border: none; font-size: 15px;" type="submit">Sign Up</button>           
+                        <button class="btn btn-primary btn-lg btn-block" style="background-color: #254ba5; border: none; font-size: 15px;" href="index.php">Sign Up</button>           
                       </div>
                       <div class="col-4">
                         <div class="g-signin2" data-onsuccess="onSignIn"></div>
@@ -35,6 +36,7 @@
       </section>
 
   <script src="index.js"></script>
+  <script src="index.php"></script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
